force-app/main/default/objects/CST_Queue__c/CST_Queue__c.object-meta.xml
<CustomObject>
    <label>CST Queue</label>
    <nameField>
        <displayFormat>CST-{DD}-{MM}-{YYYY}-{00000}</displayFormat>
        <label>CST Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CST Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>