force-app/main/default/objects/CST_Queue__c/fields/Call_Forward_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_Forward_Time__c</fullName>
    <label>Call Forward Time</label>
    <type>DateTime</type>
</CustomField>