force-app/main/default/objects/CST_Queue__c/fields/CST_Agent__c.field-meta.xml
<CustomField>
    <fullName>CST_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CST Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CST_Agent</relationshipName>
    <type>Lookup</type>
</CustomField>