force-app/main/default/objects/CST_Queue__c/fields/Leave_Time__c.field-meta.xml
<CustomField>
    <fullName>Leave_Time__c</fullName>
    <label>Leave Time</label>
    <type>DateTime</type>
</CustomField>