force-app/main/default/objects/CST_Queue__c/fields/QueuePosition__c.field-meta.xml
<CustomField>
    <fullName>QueuePosition__c</fullName>
    <label>QueuePosition</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>