force-app/main/default/objects/CST_Queue__c/fields/Service_Area__c.field-meta.xml
<CustomField>
    <fullName>Service_Area__c</fullName>
    <label>Service Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Council_Tax</fullName>
                <label>Council Tax</label>
            </value>
            <value>
                <fullName>Benefits</fullName>
            </value>
            <value>
                <fullName>Service 3</fullName>
            </value>
            <value>
                <fullName>Service 4</fullName>
            </value>
            <value>
                <fullName>Service 5</fullName>
            </value>
            <value>
                <fullName>Service 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>