force-app/main/default/objects/CST_Queue__c/fields/Service_Detail__c.field-meta.xml
<CustomField>
    <fullName>Service_Detail__c</fullName>
    <label>Service Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>