force-app/main/default/objects/CST_Queue__c/listViews/Current_Queue.listView-meta.xml
<ListView>
    <fullName>Current_Queue</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>First_Name__c</columns>
    <columns>Surname__c</columns>
    <columns>Service_Area__c</columns>
    <columns>Service_Detail__c</columns>
    <columns>Arrival_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Waiting</value>
    </filters>
    <label>Current Queue</label>
</ListView>